--- a/example/runtests_nohits.yaml
+++ b/example/runtests_nohits.yaml
@@ -240,3 +240,53 @@ benchmarks:
         op_size: 262144
         numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
         iodepth: [ 1, 2, 3, 4, 5, 8, 16, 24, 32, 64, 128 ] 
+
+      512kseqwrite:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 524288
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 6, 8, 12, 16, 20, 24, 32 ]
+      512kseqread:
+        jobname: 'seqread'
+        mode: 'read'
+        op_size: 524288
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 6, 8, 12, 16, 20, 24, 32 ]
+      512krandomwrite:
+        jobname: 'randwrite'
+        mode: 'randwrite'
+        op_size: 524288
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 8, 16, 24, 32, 40, 48, 64 ]
+      512krandomread:
+        jobname: 'randread'
+        mode: 'randread'
+        op_size: 524288
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 8, 16, 24, 32, 40, 48, 64 ]
+      1Mseqwrite:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 1048576
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 6, 8, 10, 12, 14, 16, 20 ]
+      1Mseqread:
+        jobname: 'seqread'
+        mode: 'read'
+        op_size: 1048576
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 6, 8, 10, 12, 14, 16, 20 ]
+      1Mrandomwrite:
+        jobname: 'randwrite'
+        mode: 'randwrite'
+        op_size: 1048576
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 8, 12, 16, 20, 24, 28, 32 ]
+      1Mrandomread:
+        jobname: 'randread'
+        mode: 'randread'
+        op_size: 1048576
+        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
+        iodepth: [ 1, 2, 3, 4, 8, 12, 16, 20, 24, 28, 32 ]
+    
