--- a/example/runtests_nohits_test.yaml
+++ b/example/runtests_nohits_test.yaml
@@ -45,7 +45,6 @@ benchmarks:
 
   librbdfio:
     time: 30
-    precond_time: 120
     ramp: 30
     time_based: True
     norandommap: True
@@ -69,18 +68,18 @@ benchmarks:
       precondition:
         jobname: 'precond1rw'
         mode: 'randwrite'
-        precond: True
         op_size: 65536
         numjobs: [ 1 ]
         iodepth: [ 4 ]
         monitor: False # whether to run the monitors along the test
-        
+        time:    20
       seq32kwrite:
         jobname: 'seqwrite'
         mode: 'write'
         op_size: 32768 
-        numjobs: [ 1, 1, 1, 1, 1, 1, 1,  1,  1,  1,  1  ]
-        iodepth: [ 1, 2, 3, 4, 5, 8, 16, 24, 32, 64, 128 ] 
+        numjobs: [ 1, 1, 1, 1, 1 ]
+        iodepth: [ 1, 2, 3, 4, 5 ] 
+        time: 10
       seq32kread:
         jobname: 'seqread'
         mode: 'read'
