Test tool updates
Signed-off-by: lee-j-sanders <ljsanders@uk.ibm.com>

--- a/example/runtests_nohits_8vols_totaliod.yaml
+++ b/example/runtests_nohits_8vols_totaliod.yaml
@@ -1,4 +1,5 @@
 cluster:
+
   user: 'root'
   head: "cephalasquad6.ssd.hursley.ibm.com"
   clients: ["cephalasquad6.ssd.hursley.ibm.com"]
@@ -45,7 +46,6 @@ benchmarks:
 
   librbdfio:
     time: 90
-    precond_time: 600
     ramp: 30
     time_based: True
     norandommap: True
@@ -70,7 +70,7 @@ benchmarks:
       precondition:
         jobname: 'precond1rw'
         mode: 'randwrite'
-        precond: True
+        time: 600
         op_size: 65536
         numjobs: [ 1 ]
         total_iodepth: [ 16 ]
