--- a/example/runtests_nohits_8vols_totaliod_appends_cacheon.yaml
+++ b/example/runtests_nohits_8vols_totaliod_appends_cacheon.yaml
@@ -49,6 +49,7 @@ benchmarks:
     time_based: True
     norandommap: True
     vol_size: 1000
+  # vol_size: 52500
     use_existing_volumes: True
     procs_per_volume: [1]
     volumes_per_client: [8]
@@ -66,17 +67,59 @@ benchmarks:
 
     # Each block below uses its own local options during its execution
     workloads:
+      seq32kwriteappend:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 32768 
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 2, 4, 8, 16, 32, 64, 96, 128, 256, 384, 512, 768 ] 
       seq4kwriteappend:
         jobname: 'seqwrite'
         mode: 'write'
         op_size: 4096
         numjobs: [ 1 ]
         pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
-        total_iodepth: [ 4, 8, 16, 24, 32, 48, 64, 96, 128, 256, 384, 512 ]
+        total_iodepth: [ 4, 8, 16, 32, 64, 96, 128, 256, 384, 512, 768, 1024, 1280 ]
       seq8kwriteappend:
         jobname: 'seqwrite'
         mode: 'write'
         op_size: 8192
         numjobs: [ 1 ]
         pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
-        total_iodepth: [ 4, 8, 16, 24, 32, 48, 64, 96, 128, 256, 384, 512 ]
+        total_iodepth: [ 4, 8, 16, 32, 64, 96, 128, 256, 384, 512, 768, 1024, 1280 ]
+      seq16kwriteappend:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 16384
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 4, 8, 16, 32, 64, 96, 128, 256, 384, 512, 768, 1024 ]
+      64kseqwriteappend:
+        jobname: 'write'
+        mode: 'write'
+        op_size: 65536
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 1, 2, 4, 8, 16, 32, 64, 128, 192, 256, 384 ]
+      seq256kwriteappend:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 262144
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 1, 2, 3, 4, 8, 16, 24, 32, 48, 64, 96 ]
+      seq512kwriteappend:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 524288
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 1, 2, 3, 4, 8, 16, 24, 32, 48, 64, 96 ]
+      seq1Mwriteappend:
+        jobname: 'seqwrite'
+        mode: 'write'
+        op_size: 1048576
+        numjobs: [ 1 ]
+        pre_workload_script: '/cbt.lee/tools/setup_cluster/mkdelvols.cbt'
+        total_iodepth: [ 1, 2, 3, 4, 8, 12, 16, 24, 32, 48, 64 ]
